cso2/k8s/base/istio-config/tools/opensearch-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: opensearch
  namespace: cso2-prod
spec:
  hosts:
  - "opensearch.cso2.randitha.net"
  gateways:
  - istio-ingress/cso2-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: opensearch-dashboards.cso2-prod.svc.cluster.local
        port:
          number: 5601
