cso2/k8s/base/istio-config/tools/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
  - "prometheus.cso2.randitha.net"
  gateways:
  - istio-ingress/cso2-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
